--- a/irontracking/views/index.ejs
+++ b/irontracking/views/index.ejs
@@ -1,3 +1,53 @@
-<p>Welcome to <%= title %></p>
+<div class="container-fluid mw-100">
+    <!---------- HEADER ---------->
+    <header class="row">
+        <div class="col-xs-3 col-sm-4"></div>
+        <div class="col-xs-6 col-sm-4">
+            <h1>IronTrack</h1>
+        </div>
+        <div class="col-xs-3 col-sm-4"></div>
+    </header>
 
-<a href="/dashboard"> go to dashboard </a>
+    <!---------- MAIN ---------->
+    <main>
+        <div class="row" id="form-l">
+
+            <div class="col-xs-3 col-sm-4"></div>
+            <div class="col-xs-6 col-sm-4" id="form-i">
+                <div class="form-signin" action="panel.html">
+                    <% if (!user) { %>
+                    <h2>Welcome! Please log in with GitHub</h2>
+                    <a class="btn btn-lg btn-primary btn-block" href="/auth/github">Login with GitHub</a>
+
+                    <% } else { %>
+                    <h2>Hello, <%= user.displayName %>.</h2>
+                    <% } %>
+
+                    <!-- <h2 class="form-signin-heading">Login:</h2> -->
+                </div>
+            </div>
+            <div class="col-xs-3 col-sm-4"></div>
+        </div>
+    </main>
+    <div id="carouselExampleControls" class="carousel slide mw-100" data-ride="carousel">
+        <div class="carousel-inner mw-100">
+            <div class="carousel-item active mw-100">
+                <img class="d-block mw-100" src="img/background1.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item mw-100">
+                <img class="d-block mw-100" src="img/background2.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item mw-100">
+                <img class="d-block mw-100" src="img/background3.jpg" alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
