--- a/irontracking/views/layout.ejs
+++ b/irontracking/views/layout.ejs
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Irontracking</title>
     <link rel='stylesheet' href='../public/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
     <%- body %>
   </body>
 </html>
