--- a/irontracking/public/css/main.css
+++ b/irontracking/public/css/main.css
@@ -74,11 +74,27 @@ header.row {
 
 .createBtn button{
     min-width: 200px;
-    margin-left: 309%;
+    /* margin-left: 309%; */
 }
 
 .lechuga-bar {
     position: fixed;
     min-width: 150px;
     bottom: 35px;
+}
+
+.add-ex {
+    position: absolute;
+    right: 1.5%;   
+}
+
+@media (max-width: 768px) {
+    .add-ex {
+        position: relative;
+    }  
+    .lechuga-bar {
+        position: relative;
+        margin-top: 15%;
+
+    }
 }
