--- a/irontracking/views/layout.ejs
+++ b/irontracking/views/layout.ejs
@@ -3,6 +3,7 @@
   <head>
     <title>Irontracking</title>
     <link rel='stylesheet' href='../public/stylesheets/style.css' />
+    <meta name="viewport" content="width=device-width" />
   </head>
   <body>
     <%- body %>
