feat: user experience login

--- a/irontracking/views/index.ejs
+++ b/irontracking/views/index.ejs
@@ -21,6 +21,8 @@
 
                     <% } else { %>
                     <h2>Hello, <%= user.displayName %>.</h2>
+                    <a class="btn btn-primary btn-block goBtn" href="/auth/github">GO!</a>
+
                     <% } %>
 
                     <!-- <h2 class="form-signin-heading">Login:</h2> -->
