--- a/irontracking/public/css/main.css
+++ b/irontracking/public/css/main.css
@@ -9,6 +9,18 @@ h1{
     font-size: 50px;
 }
 
+div.form-signin h2 {
+    text-align: center;
+}
+
+.goBtn {
+    font-size: 24px!important;
+    max-width: 30%;
+    margin: auto;
+    margin-top: 15px;
+}
+
+
 #form-l {
     margin-top: 20%;
     position: absolute;
