FEAT: progress bar

--- a/irontracking/views/layout.ejs
+++ b/irontracking/views/layout.ejs
@@ -3,6 +3,7 @@
   <head>
     <title>Irontracking</title>
     <meta name="viewport" content="width=device-width" />
+    <script type="text/javascript" src="js/main.js"></script>
   </head>
   <body>
     <%- body %>
