--- a/irontracking/views/dashboard.ejs
+++ b/irontracking/views/dashboard.ejs
@@ -36,8 +36,8 @@
                 <div>
                     <span>Módulo 1</span>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                             aria-valuemax="100" style="width: 25%"> 25% </div>
+                        <div id="progressBar1" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                             aria-valuemax="100" style="width: 0%"> 0% </div>
                     </div>
                 </div>
                 <div>
@@ -97,42 +97,13 @@
 
                             <td>
                                 <div class="checkbox">
-                                    <input type="checkbox" name="primera" value="primera"> Primera
+                                    <input class="sum" type="checkbox" name="primera" value="primera"> Primera
                                     <br>
-                                    <input type="checkbox" name="segunda" value="segunda"> Segunda
+                                    <input class="sum" type="checkbox" name="segunda" value="segunda"> Segunda
                                     <br>
-                                    <input type="checkbox" name="tercera" value="tercera"> Tercera
+                                    <input class="sum" type="checkbox" name="tercera" value="tercera"> Tercera
                                     <br>
-                                    <input type="checkbox" name="cuarta" value="cuarta"> Cuarta
-                                    <br>
-                                </div>
-                            </td>
-                            <td>
-                                <textarea cols="30" rows="4"></textarea>
-                            </td>
-                            <td>
-                                <button type="submit" class="btn btn-primary waves-effect">Guardar en Github</button>
-                                <br>
-                                <button type="submit" class="btn btn-light waves-effect">Enviar Comentario</button>
-                            </td>
-                        </tr>
-                    </form>
-                </div>
-
-                <div class="form-group">
-                    <form method="post" action="panel.html">
-                        <tr>
-                            <th scope="row">PP | JS Basic Algorithms</th>
-
-                            <td>
-                                <div class="checkbox">
-                                    <input type="checkbox" name="primera" value="primera"> Primera
-                                    <br>
-                                    <input type="checkbox" name="segunda" value="segunda"> Segunda
-                                    <br>
-                                    <input type="checkbox" name="tercera" value="tercera"> Tercera
-                                    <br>
-                                    <input type="checkbox" name="cuarta" value="cuarta"> Cuarta
+                                    <input class="sum" type="checkbox" name="cuarta" value="cuarta"> Cuarta
                                     <br>
                                 </div>
                             </td>
@@ -155,42 +126,13 @@
 
                             <td>
                                 <div class="checkbox">
-                                    <input type="checkbox" name="primera" value="primera"> Primera
+                                    <input class="sum" type="checkbox" name="primera" value="primera"> Primera
                                     <br>
-                                    <input type="checkbox" name="segunda" value="segunda"> Segunda
+                                    <input class="sum" type="checkbox" name="segunda" value="segunda"> Segunda
                                     <br>
-                                    <input type="checkbox" name="tercera" value="tercera"> Tercera
+                                    <input class="sum" type="checkbox" name="tercera" value="tercera"> Tercera
                                     <br>
-                                    <input type="checkbox" name="cuarta" value="cuarta"> Cuarta
-                                    <br>
-                                </div>
-                            </td>
-                            <td>
-                                <textarea cols="30" rows="4"></textarea>
-                            </td>
-                            <td>
-                                <button type="submit" class="btn btn-primary waves-effect">Guardar en Github</button>
-                                <br>
-                                <button type="submit" class="btn btn-light waves-effect">Enviar Comentario</button>
-                            </td>
-                        </tr>
-                    </form>
-                </div>
-
-                <div class="form-group">
-                    <form method="post" action="panel.html">
-                        <tr>
-                            <th scope="row">PP | JS Basic Algorithms</th>
-
-                            <td>
-                                <div class="checkbox">
-                                    <input type="checkbox" name="primera" value="primera"> Primera
-                                    <br>
-                                    <input type="checkbox" name="segunda" value="segunda"> Segunda
-                                    <br>
-                                    <input type="checkbox" name="tercera" value="tercera"> Tercera
-                                    <br>
-                                    <input type="checkbox" name="cuarta" value="cuarta"> Cuarta
+                                    <input class="sum" type="checkbox" name="cuarta" value="cuarta"> Cuarta
                                     <br>
                                 </div>
                             </td>
@@ -213,13 +155,71 @@
 
                             <td>
                                 <div class="checkbox">
-                                    <input type="checkbox" name="primera" value="primera"> Primera
+                                    <input class="sum" type="checkbox" name="primera" value="primera"> Primera
                                     <br>
-                                    <input type="checkbox" name="segunda" value="segunda"> Segunda
+                                    <input class="sum" type="checkbox" name="segunda" value="segunda"> Segunda
                                     <br>
-                                    <input type="checkbox" name="tercera" value="tercera"> Tercera
+                                    <input class="sum" type="checkbox" name="tercera" value="tercera"> Tercera
                                     <br>
-                                    <input type="checkbox" name="cuarta" value="cuarta"> Cuarta
+                                    <input class="sum" type="checkbox" name="cuarta" value="cuarta"> Cuarta
+                                    <br>
+                                </div>
+                            </td>
+                            <td>
+                                <textarea cols="30" rows="4"></textarea>
+                            </td>
+                            <td>
+                                <button type="submit" class="btn btn-primary waves-effect">Guardar en Github</button>
+                                <br>
+                                <button type="submit" class="btn btn-light waves-effect">Enviar Comentario</button>
+                            </td>
+                        </tr>
+                    </form>
+                </div>
+
+                <div class="form-group">
+                    <form method="post" action="panel.html">
+                        <tr>
+                            <th scope="row">PP | JS Basic Algorithms</th>
+
+                            <td>
+                                <div class="checkbox">
+                                    <input class="sum" type="checkbox" name="primera" value="primera"> Primera
+                                    <br>
+                                    <input class="sum" type="checkbox" name="segunda" value="segunda"> Segunda
+                                    <br>
+                                    <input class="sum" type="checkbox" name="tercera" value="tercera"> Tercera
+                                    <br>
+                                    <input class="sum" type="checkbox" name="cuarta" value="cuarta"> Cuarta
+                                    <br>
+                                </div>
+                            </td>
+                            <td>
+                                <textarea cols="30" rows="4"></textarea>
+                            </td>
+                            <td>
+                                <button type="submit" class="btn btn-primary waves-effect">Guardar en Github</button>
+                                <br>
+                                <button type="submit" class="btn btn-light waves-effect">Enviar Comentario</button>
+                            </td>
+                        </tr>
+                    </form>
+                </div>
+
+                <div class="form-group">
+                    <form method="post" action="panel.html">
+                        <tr>
+                            <th scope="row">PP | JS Basic Algorithms</th>
+
+                            <td>
+                                <div class="checkbox">
+                                    <input class="sum" type="checkbox" name="primera" value="primera"> Primera
+                                    <br>
+                                    <input class="sum" type="checkbox" name="segunda" value="segunda"> Segunda
+                                    <br>
+                                    <input class="sum" type="checkbox" name="tercera" value="tercera"> Tercera
+                                    <br>
+                                    <input class="sum" type="checkbox" name="cuarta" value="cuarta"> Cuarta
                                     <br>
                                 </div>
                             </td>
