--- a/irontracking/public/css/main.css
+++ b/irontracking/public/css/main.css
@@ -1,3 +1,12 @@
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+
 header {
     background-color: #4e555b;
     color: white;
@@ -99,6 +108,90 @@ header.row {
     position: absolute;
     right: 1.5%;   
 }
+
+.wrap {
+    position: absolute;
+    overflow: hidden;
+    top: 20%;
+    right: 10%;
+    /* bottom: 85px; */
+    left: 10%;
+    padding: 20px 50px;
+    display: block;
+    border-radius: 4px;
+    transform: translateY(20px);
+    transition: all 0.5s;
+    visibility: hidden;
+  }
+  .wrap .content {
+    opacity: 0;
+  }
+  .wrap:before {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    background: white;
+    content: "";
+    bottom: 10px;
+    left: 50%;
+    top: 95%;
+    color: #fff;
+    border-radius: 50%;
+    -webkit-transition: all 600ms cubic-bezier(0.215, 0.61, 0.355, 1);
+    transition: all 600ms cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  .wrap.active {
+    display: block;
+    visibility: visible;
+    box-shadow: 2px 3px 16px silver;
+    transition: all 600ms;
+    transform: translateY(0px);
+    transition: all 0.5s;
+  }
+  .wrap.active:before {
+    height: 2000px;
+    width: 2000px;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    margin-left: -1000px;
+    margin-top: -1000px;
+    display: block;
+    -webkit-transition: all 600ms cubic-bezier(0.215, 0.61, 0.355, 1);
+    transition: all 600ms cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  .wrap.active .content {
+    position: relative;
+    z-index: 1;
+    opacity: 1;
+    transition: all 600ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
+
+
+  a.button.glyphicon.glyphicon-plus {
+    padding: 11px 11px 13px 13px;
+    outline: none;
+    border-radius: 50%;
+    background: #007fed;
+    color: #fff;
+    font-size: 24px;
+    display: block;
+    position: absolute;
+    left: 98%;
+    bottom: 92%;
+    top: auto;
+    margin-left: -25px;
+    transition: transform 0.25s;
+    z-index: 4;
+  }
+  a.button.glyphicon.glyphicon-plus:hover {
+    text-decoration: none;
+    background: #2198ff;
+  }
+  a.button.active {
+    transform: rotate(135deg);
+    transition: transform 0.5s;
+  }
 
 @media (max-width: 768px) {
     .add-ex {
