--- a/irontracking/views/dashboard.ejs
+++ b/irontracking/views/dashboard.ejs
@@ -112,12 +112,9 @@
                                     <textarea class="textarea" cols="30" rows="4" name="comentarios">asdasdasd</textarea>
                                 </td>
                                 <td>
-                                    <!-- <button type="submit" class="btn btn-primary waves-effect">Guardar en Github</button> -->
+                                    <button type="submit" class="btn btn-primary waves-effect">Guardar en Github</button>
                                     <br>
-                                    <!-- <form action="/mail/send" method="POST"> -->
-                                        <button id="emailLink" class="btn btn-light waves-effect">Enviar Comentario</button>
-                                        <!-- <a action="mailto" type="submit" href="#" name="emailLink" id="emailLink" class="btn btn-light waves-effect">Enviar Comentario</a> -->
-                                    <!-- </form> -->
+                                    <button id="emailLink" class="btn btn-light waves-effect">Enviar Comentario</button>
                                 </td>
                             </tr>
                         </form>
@@ -283,7 +280,7 @@
 
                 </tbody>
             </table>
-            
+
 
         </main>
     </div>
