--- a/irontracking/views/layouts/main.ejs
+++ b/irontracking/views/layouts/main.ejs
@@ -6,7 +6,7 @@
         <link href="css/bootstrap.css" type="text/css" rel="stylesheet">
         <link href="css/main.css" type="text/css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-
+        <script type="text/javascript" src="js/main.js"></script>
 </head>
 
 <body>
