--- a/irontracking/views/dashboard.ejs
+++ b/irontracking/views/dashboard.ejs
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="#">Perfil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Estadísticas</a>
+                    <a class="nav-link" href="/stats">Estadísticas</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Salir</a>
