--- a/irontracking/views/dashboard.ejs
+++ b/irontracking/views/dashboard.ejs
@@ -19,11 +19,8 @@
             </div>
             <ul class="nav nav-pills flex-column">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Tracking
+                    <a class="nav-link active" href="/dashboard">Tracking
                     </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Perfil</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/stats">Estadísticas</a>
