--- a/irontracking/views/admin/index.ejs
+++ b/irontracking/views/admin/index.ejs
@@ -1,1 +1,295 @@
-<!-- ////pintar los ejercicios -->
+Hola AD
+
+
+
+
+
+<div class="container-fluid">
+    <!---------- HEADER ---------->
+    <header class="row">
+        <div class="col-xs-3 col-sm-4"></div>
+        <div class="col-xs-6 col-sm-4">
+            <h1>IronTrack</h1>
+        </div>
+        <div class="col-xs-3 col-sm-4"></div>
+    </header>
+
+    <!---------- NAV ---------->
+
+
+    <div class="row control maincont">
+
+        <nav class="col-sm-3 col-md-2">
+            <div class="img-perfil">
+                <img src="img/perfil.jpg">
+            </div>
+            <ul class="nav nav-pills flex-column">
+                <li class="nav-item">
+                    <a class="nav-link active" href="/dashboard">Tracking
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/stats">Estadísticas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Salir</a>
+                </li>
+            </ul>
+            <div class="lechuga-bar">
+                <div>
+                    <span>Módulo 1</span>
+                    <div class="progress">
+                        <div id="progressBar1" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
+                             aria-valuemin="0" aria-valuemax="100" style="width: 0%"> 0% </div>
+                    </div>
+                </div>
+                <div>
+                    <span>Módulo 2</span>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                             aria-valuemax="100" style="width: 50%"> 50% </div>
+                    </div>
+                </div>
+                <div>
+                    <span>Módulo 3</span>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                             aria-valuemax="100" style="width: 100%"> 100% </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+
+        <!---------- MAIN ---------->
+        <main class="col-sm-9 col-md-10">
+            <!-- <div class="titleAdd">
+                    <table class="table">
+                        <thead class="bg-secondary text-white">
+                            <tr>
+                                <th scope="col">Añadir nuevo ejercicio</th>
+                            </tr>
+                        </thead>
+                    </table>
+                </div> -->
+            <div class="addExc">
+                <table class="table active">
+                    <thead class="bg-secondary text-white">
+                    <tr>
+                        <th scope="col">Ejercicio</th>
+                        <th scope="col">Módulo</th>
+                        <th scope="col">Iteraciones</th>
+                        <th scope="col">Enlace</th>
+                        <th scope="col">Guardar</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+
+                    <div class="form-group">
+                        <form method="post" action="panel.html">
+                            <tr>
+                                <th scope="row">
+                                    <div>
+                                        <input type="text" placeholder="Nombre del ejercicio">
+                                    </div>
+                                </th>
+
+                                <td>
+                                    <div class="moduloInput">
+                                        <select>
+                                            <option value="primer">1º</option>
+                                            <option value="segund">2º</option>
+                                            <option value="tercer">3º</option>
+                                        </select>
+                                    </div>
+                                </td>
+
+                                <td>
+                                    <div class="IterationsInput">
+                                        <input type="number" placeholder="iteraciones">
+                                    </div>
+                                </td>
+                                <td>
+                                    <div>
+                                        <input type="text" placeholder="Enlace a Github"> </div>
+                                </td>
+                                <td>
+                                    <button type="submit" class="btn btn-primary waves-effect">Guardar ejercicio</button>
+                                    <br>
+                                    <!-- <button type="submit" class="btn btn-light waves-effect">Enviar Comentario</button> -->
+                                </td>
+                            </tr>
+                        </form>
+                    </div>
+
+                </table>
+            </div>
+            <br>
+            <br>
+
+            <div class="nav">
+                <ul class="nav nav-tabs">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="modulo1" href="#modulo1">Módulo 1</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="modulo2" href="#modulo2">Módulo 2</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="modulo3" href="#">Módulo 3</a>
+                    </li>
+                    <!-- <li class="createBtn">
+                        <button type="submit" class="btn btn-light waves-effect add-ex">Añadir ejercicio</button>
+                    </li> -->
+                </ul>
+            </div>
+            <div class="modulo1">
+                <table class="table active">
+                    <thead class="bg-secondary text-white">
+                    <tr>
+                        <th scope="col">Ejercicio</th>
+                        <th scope="col">Iteraciones</th>
+                        <th scope="col">Enlace</th>
+                        <th scope="col">Guardar</th>
+                    </tr>
+                    </thead>
+                    </tbody>
+
+                    <% var it = ['Primera', 'Segunda', 'Tercera', 'Cuarta', 'Quinta', 'Sexta', 'Séptima', 'Octava']; %>
+
+                    <% for( let i = 0; i < module1.length; i++ ) { %>
+
+                    <div class="form-group">
+                        <form method="post" action="/mail/send">
+                            <tr>
+                                <th scope="row"><%= module1[i].name %></th>
+
+
+                                <td>
+                                    <div class="checkbox">
+                                <% for( let j = 0; j < module1[i].iterations; j++ ) { %>
+                                        <input class="sum" type="checkbox" name="<%= it[j] %>" value="<%= it[j] %>"><%= it[j] %>
+                                        <br>
+                                <% } %>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div>
+                                        <input type="text" placeholder="Enlace a Github"> </div>
+                                </td>
+                                <td>
+                                    <button type="submit" class="btn btn-primary waves-effect">Guardar en Github</button>
+                                    <br>
+                                    <button id="emailLink" class="btn btn-light waves-effect">Enviar Comentario</button>
+                                </td>
+                            </tr>
+                        </form>
+                    </div>
+
+                    <% } %>
+
+
+                </table>
+            </div>
+            <div class="modulo2">
+                <table class="table active">
+                    <thead class="bg-secondary text-white">
+                    <tr>
+                        <th scope="col">Ejercicio</th>
+                        <th scope="col">Iteraciones</th>
+                        <th scope="col">Enlace</th>
+                        <th scope="col">Guardar</th>
+                    </tr>
+                    </thead>
+                    </tbody>
+
+                    <% var it = ['Primera', 'Segunda', 'Tercera', 'Cuarta', 'Quinta', 'Sexta', 'Séptima', 'Octava']; %>
+
+                    <% for( let i = 0; i < module1.length; i++ ) { %>
+
+                    <div class="form-group">
+                        <form method="post" action="/mail/send">
+                            <tr>
+                                <th scope="row"><%= module1[i].name %></th>
+
+
+                                <td>
+                                    <div class="checkbox">
+                                        <% for( let j = 0; j < module1[i].iterations; j++ ) { %>
+                                        <input class="sum" type="checkbox" name="<%= it[j] %>" value="<%= it[j] %>"><%= it[j] %>
+                                        <br>
+                                        <% } %>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div>
+                                        <input type="text" placeholder="Enlace a Github"> </div>
+                                </td>
+                                <td>
+                                    <button type="submit" class="btn btn-primary waves-effect">Guardar en Github</button>
+                                    <br>
+                                    <button id="emailLink" class="btn btn-light waves-effect">Enviar Comentario</button>
+                                </td>
+                            </tr>
+                        </form>
+                    </div>
+
+                    <% } %>
+
+
+                </table>
+            </div>
+            <div class="modulo3">
+                <table class="table active">
+                    <thead class="bg-secondary text-white">
+                    <tr>
+                        <th scope="col">Ejercicio</th>
+                        <th scope="col">Iteraciones</th>
+                        <th scope="col">Enlace</th>
+                        <th scope="col">Guardar</th>
+                    </tr>
+                    </thead>
+                    </tbody>
+
+                    <% var it = ['Primera', 'Segunda', 'Tercera', 'Cuarta', 'Quinta', 'Sexta', 'Séptima', 'Octava']; %>
+
+                    <% for( let i = 0; i < module1.length; i++ ) { %>
+
+                    <div class="form-group">
+                        <form method="post" action="/mail/send">
+                            <tr>
+                                <th scope="row"><%= module1[i].name %></th>
+
+
+                                <td>
+                                    <div class="checkbox">
+                                        <% for( let j = 0; j < module1[i].iterations; j++ ) { %>
+                                        <input class="sum" type="checkbox" name="<%= it[j] %>" value="<%= it[j] %>"><%= it[j] %>
+                                        <br>
+                                        <% } %>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div>
+                                        <input type="text" placeholder="Enlace a Github"> </div>
+                                </td>
+                                <td>
+                                    <button type="submit" class="btn btn-primary waves-effect">Guardar en Github</button>
+                                    <br>
+                                    <button id="emailLink" class="btn btn-light waves-effect">Enviar Comentario</button>
+                                </td>
+                            </tr>
+                        </form>
+                    </div>
+
+                    <% } %>
+
+
+                </table>
+            </div>
+
+
+
+        </main>
+    </div>
+
+</div>
