feat: pantalla de inicio

--- a/irontracking/views/index.ejs
+++ b/irontracking/views/index.ejs
@@ -12,11 +12,10 @@
     <main>
         <div class="row" id="form-l">
 
-            <div class="col-xs-3 col-sm-4"></div>
             <div class="col-xs-6 col-sm-4" id="form-i">
                 <div class="form-signin" action="panel.html">
                     <% if (!user) { %>
-                    <h2>Welcome! Please log in with GitHub</h2>
+                    <h2>Welcome Ironhacker!</h2>
                     <a class="btn btn-lg btn-primary btn-block" href="/auth/github">Login with GitHub</a>
 
                     <% } else { %>
@@ -28,7 +27,6 @@
                     <!-- <h2 class="form-signin-heading">Login:</h2> -->
                 </div>
             </div>
-            <div class="col-xs-3 col-sm-4"></div>
         </div>
     </main>
     <div id="carouselExampleControls" class="carousel slide mw-100" data-ride="carousel">
