some files deleted

--- a/irontracking/views/dashboard.ejs
+++ b/irontracking/views/dashboard.ejs
@@ -98,7 +98,7 @@
                                     <td>
                                         <div class="checkbox">
                                             <% for( let j = 0; j < module1[i].iterations; j++ ) { %>
-                                            <input class="sum" type="checkbox" name="<%= it[j] %>" value="<%= it[j] %>">
+                                            <input class="sum" type="checkbox" name="<%= it[j] %>" value="<%= it[j] %>" checked>
                                             <%= it[j] %>
                                             <br>
                                             <% } %>
