--- a/irontracking/public/css/main.css
+++ b/irontracking/public/css/main.css
@@ -66,6 +66,10 @@ header.row {
     margin: 8% 1%;
 }
 
+/* #carouselExampleControls {
+    padding-top: 5%;
+} */
+
 .img-perfil {
     margin-bottom: 10%;
 }
@@ -188,16 +192,33 @@ header.row {
 .stadisticas{
     display: inline-block;
     max-width: 30%;
+    margin: 0px 5%;
 }
 
 .stadisticas img {
     max-width: 100%;
 }
 
+.stadisticas p {
+    text-align: center;
+}
+
 .statsContainer {
-    max-width: 80%;
     margin: auto;
-    
+    width: 90%;
+    display: flex;
+}
+
+.statsSecond {
+    margin-top: 11%
+}
+
+.statsFirst {
+    margin-top: 2%
+}
+
+.statsThird {
+    margin-top: 15%
 }
 
   a.button.glyphicon.glyphicon-plus:hover {
