feat: checkbox check

--- a/irontracking/views/stats.ejs
+++ b/irontracking/views/stats.ejs
@@ -58,22 +58,24 @@
         </nav>
 
         <!---------- MAIN ---------->
-        <main class="col-sm-9 col-md-10">
-            <div class="statsContainer">
-                    <div class="statsSecond stadisticas">
-                        <p>BLA BLA BLA BLA BLA </p>
-                        <img src="/img/PLATA.png" alt="imágen Plata">
-                    </div>
+        <main class="col-sm-9 col-md-10 ">
 
-                    <div class="statsFirst stadisticas">
-                            <p>BLA BLA BLA BLA BLA </p>
-                        <img src="/img/oro.png" alt="imágen Oro">
-                    </div>
-                    <div class="statsThird stadisticas">
-                            <p>BLA BLA BLA BLA BLA </p>
-                        <img src="/img/BRONCE.png" alt="imágen Bronce">
-                    </div>
-              </div>
+            <input type="checkbox" class="pepo">
+            <div class="statsContainer">
+                <div class="statsSecond stadisticas">
+                    <p>BLA BLA BLA BLA BLA </p>
+                    <img src="/img/PLATA.png" alt="imágen Plata">
+                </div>
+
+                <div class="statsFirst stadisticas">
+                    <p>BLA BLA BLA BLA BLA </p>
+                    <img src="/img/oro.png" alt="imágen Oro">
+                </div>
+                <div class="statsThird stadisticas">
+                    <p>BLA BLA BLA BLA BLA </p>
+                    <img src="/img/BRONCE.png" alt="imágen Bronce">
+                </div>
+            </div>
 
         </main>
     </div>
