--- a/irontracking/views/stats.ejs
+++ b/irontracking/views/stats.ejs
@@ -60,7 +60,8 @@
         <!---------- MAIN ---------->
         <main class="col-sm-9 col-md-10 ">
 
-            <input type="checkbox" class="pepo">
+                <button id="emailLink" class="btn btn-light waves-effect probando">Enviar Comentario</button>
+                <i class="fas fa-trophy faa-tada animated"></i>
             <div class="statsContainer">
                 <div class="statsSecond stadisticas">
                     <p>BLA BLA BLA BLA BLA </p>
