--- a/irontracking/views/dashboard.ejs
+++ b/irontracking/views/dashboard.ejs
@@ -29,25 +29,28 @@
                 </li>
             </ul>
             <div class="lechuga-bar">
-                <div>
+                <div class="progressBarra">
                     <span>Módulo 1</span>
+                    <div class="trofeo1"></div>
                     <div class="progress">
                         <div id="progressBar1" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
                             aria-valuemin="0" aria-valuemax="100" style="width: 0%"> 0% </div>
                     </div>
                 </div>
-                <div>
+                <div class="progressBarra">
                     <span>Módulo 2</span>
+                    <div class="trofeo2"></div>
                     <div class="progress">
-                        <div id="progressBar2" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                            aria-valuemax="100" style="width: 0%"> 0% </div>
+                        <div id="progressBar2" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
+                            aria-valuemin="0" aria-valuemax="100" style="width: 0%"> 0% </div>
                     </div>
                 </div>
-                <div>
+                <div class="progressBarra">
                     <span>Módulo 3</span>
+                    <div class="trofeo3"></div>
                     <div class="progress">
-                        <div id="progressBar3" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                            aria-valuemax="100" style="width: 0%"> 0% </div>
+                        <div id="progressBar3" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
+                            aria-valuemin="0" aria-valuemax="100" style="width: 0%"> 0% </div>
                     </div>
                 </div>
             </div>
@@ -55,9 +58,16 @@
 
         <!---------- MAIN ---------->
         <main class="col-sm-9 col-md-10">
-            <h2>Bienvenido,
-                <%= user.displayName %>
-            </h2>
+            <div class="cabeceraNombre">
+                <h2>Bienvenido,
+                    <%= user.displayName %>
+                </h2>
+                <div class="estrellaMuerte">
+                    <i class="fas fa-star oro"></i>
+                    <i class="fas fa-star plata"></i>
+                    <i class="fas fa-star bronce"></i>
+                </div>
+            </div>
             <br>
             <div class="nav">
                 <ul class="nav nav-tabs">
@@ -88,134 +98,136 @@
                     </thead>
                     <tbody>
 
-                    <% var it = ['Primera', 'Segunda', 'Tercera', 'Cuarta', 'Quinta', 'Sexta', 'Séptima', 'Octava', 'Novena', 'Décima', 'Undécima', 'Duodécima']; %>
-                    <% for( let i = 0; i < module1.length; i++ ) { %>
-                        <div class="form-group">
-                            <form method="post" action="/mail/send">
-                                <tr>
-                                    <th scope="row"><%= module1[i].name %></th>
+                        <% var it = ['Primera', 'Segunda', 'Tercera', 'Cuarta', 'Quinta', 'Sexta', 'Séptima', 'Octava', 'Novena', 'Décima', 'Undécima', 'Duodécima']; %>
+                            <% for( let i = 0; i < module1.length; i++ ) { %>
+                                <div class="form-group">
+                                    <form method="post" action="/mail/send">
+                                        <tr>
+                                            <th scope="row">
+                                                <%= module1[i].name %>
+                                            </th>
 
-                                    <td>
-                                        <div class="checkbox">
-                                            <% for( let j = 0; j < module1[i].iterations; j++ ) { %>
-                                            <input class="sum" type="checkbox" name="<%= it[j] %>" value="<%= it[j] %>" checked>
-                                            <%= it[j] %>
-                                            <br>
-                                            <% } %>
-                                        </div>
-                                    </td>
+                                            <td>
+                                                <div class="checkbox">
+                                                    <% for( let j = 0; j < module1[i].iterations; j++ ) { %>
+                                                        <input class="sum" type="checkbox" name="<%= it[j] %>" value="<%= it[j] %>">
+                                                        <%= it[j] %>
+                                                            <br>
+                                                            <% } %>
+                                                </div>
+                                            </td>
 
-                                    <td>
-                                        <textarea class="textarea" cols="30" rows="4" name="comentarios">asdasdasd</textarea>
-                                    </td>
-                                    <td>
-                                        <button type="submit" class="btn btn-primary waves-effect">Guardar en Github</button>
-                                        <br>
-                                        <button id="emailLink" class="btn btn-light waves-effect">Enviar Comentario</button>
-                                    </td>
-                                </tr>
-                            </form>
-                        </div>
+                                            <td>
+                                                <textarea class="textarea" cols="30" rows="4" name="comentarios">asdasdasd</textarea>
+                                            </td>
+                                            <td>
+                                                <button type="submit" class="btn btn-primary waves-effect">Guardar en Github</button>
+                                                <br>
+                                                <button id="emailLink" class="btn btn-light waves-effect">Enviar Comentario</button>
+                                            </td>
+                                        </tr>
+                                    </form>
+                                </div>
 
-                    <% } %>
-
-                    </tbody>
-                </table>
-            </div>
-
-            <div class="modulo2 pestnavs active">
-                <table class="table modulo1table">
-                    <thead class="bg-secondary text-white">
-                    <tr>
-                        <th scope="col">Ejercicio</th>
-                        <th scope="col">Iteración</th>
-                        <th scope="col">Comentarios</th>
-                        <th scope="col">Guardar</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-
-                    <% var it = ['Primera', 'Segunda', 'Tercera', 'Cuarta', 'Quinta', 'Sexta', 'Séptima', 'Octava', 'Novena', 'Décima', 'Undécima', 'Duodécima']; %>
-                    <% for( let i = 0; i < module1.length; i++ ) { %>
-                    <div class="form-group">
-                        <form method="post" action="/mail/send">
-                            <tr>
-                                <th scope="row">PP | JS Basic Algorithms</th>
-
-                                <td>
-                                    <div class="checkbox">
-                                        <input class="sum" type="checkbox" name="primera" value="primera"> Primera
-                                        <br>
-                                        <input class="sum" type="checkbox" name="segunda" value="segunda"> Segunda
-                                        <br>
-                                        <input class="sum" type="checkbox" name="tercera" value="tercera"> Tercera
-                                        <br>
-                                        <input class="sum" type="checkbox" name="cuarta" value="cuarta"> Cuarta
-                                        <br>
-                                    </div>
-                                </td>
-                                <td>
-                                    <textarea class="textarea" cols="30" rows="4" name="comentarios">asdasdasd</textarea>
-                                </td>
-                                <td>
-                                    <button type="submit" class="btn btn-primary waves-effect">Guardar en Github</button>
-                                    <br>
-                                    <button id="emailLink" class="btn btn-light waves-effect">Enviar Comentario</button>
-                                </td>
-                            </tr>
-                        </form>
-                    </div>
-
-                    <% } %>
+                                <% } %>
 
                     </tbody>
                 </table>
             </div>
 
-            <div class="modulo3 pestnavs active">
-                <table class="table modulo1table">
+            <div class="modulo2 pestnavs">
+                <table class="table modulo2table">
                     <thead class="bg-secondary text-white">
-                    <tr>
-                        <th scope="col">Ejercicio</th>
-                        <th scope="col">Iteración</th>
-                        <th scope="col">Comentarios</th>
-                        <th scope="col">Guardar</th>
-                    </tr>
+                        <tr>
+                            <th scope="col">Ejercicio</th>
+                            <th scope="col">Iteración</th>
+                            <th scope="col">Comentarios</th>
+                            <th scope="col">Guardar</th>
+                        </tr>
                     </thead>
                     <tbody>
 
-                    <% var it = ['Primera', 'Segunda', 'Tercera', 'Cuarta', 'Quinta', 'Sexta', 'Séptima', 'Octava', 'Novena', 'Décima', 'Undécima', 'Duodécima']; %>
-                    <% for( let i = 0; i < module1.length; i++ ) { %>
-                    <div class="form-group">
-                        <form method="post" action="/mail/send">
-                            <tr>
-                                <th scope="row">PP | JS Basic Algorithms</th>
+                        <% var it = ['Primera', 'Segunda', 'Tercera', 'Cuarta', 'Quinta', 'Sexta', 'Séptima', 'Octava', 'Novena', 'Décima', 'Undécima', 'Duodécima']; %>
+                            <% for( let i = 0; i < module1.length; i++ ) { %>
+                                <div class="form-group">
+                                    <form method="post" action="/mail/send">
+                                        <tr>
+                                            <th scope="row">PP | JS Basic Algorithms</th>
 
-                                <td>
-                                    <div class="checkbox">
-                                        <input class="sum" type="checkbox" name="primera" value="primera"> Primera
-                                        <br>
-                                        <input class="sum" type="checkbox" name="segunda" value="segunda"> Segunda
-                                        <br>
-                                        <input class="sum" type="checkbox" name="tercera" value="tercera"> Tercera
-                                        <br>
-                                        <input class="sum" type="checkbox" name="cuarta" value="cuarta"> Cuarta
-                                        <br>
-                                    </div>
-                                </td>
-                                <td>
-                                    <textarea class="textarea" cols="30" rows="4" name="comentarios">asdasdasd</textarea>
-                                </td>
-                                <td>
-                                    <button type="submit" class="btn btn-primary waves-effect">Guardar en Github</button>
-                                    <br>
-                                    <button id="emailLink" class="btn btn-light waves-effect">Enviar Comentario</button>
-                                </td>
-                            </tr>
-                        </form>
-                    </div>
+                                            <td>
+                                                <div class="checkbox">
+                                                    <input class="sum" type="checkbox" name="primera" value="primera"> Primera
+                                                    <br>
+                                                    <input class="sum" type="checkbox" name="segunda" value="segunda"> Segunda
+                                                    <br>
+                                                    <input class="sum" type="checkbox" name="tercera" value="tercera"> Tercera
+                                                    <br>
+                                                    <input class="sum" type="checkbox" name="cuarta" value="cuarta"> Cuarta
+                                                    <br>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <textarea class="textarea" cols="30" rows="4" name="comentarios">asdasdasd</textarea>
+                                            </td>
+                                            <td>
+                                                <button type="submit" class="btn btn-primary waves-effect">Guardar en Github</button>
+                                                <br>
+                                                <button id="emailLink" class="btn btn-light waves-effect">Enviar Comentario</button>
+                                            </td>
+                                        </tr>
+                                    </form>
+                                </div>
 
-                    <% } %>
+                                <% } %>
+
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="modulo3 pestnavs">
+                <table class="table modulo3table">
+                    <thead class="bg-secondary text-white">
+                        <tr>
+                            <th scope="col">Ejercicio</th>
+                            <th scope="col">Iteración</th>
+                            <th scope="col">Comentarios</th>
+                            <th scope="col">Guardar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                        <% var it = ['Primera', 'Segunda', 'Tercera', 'Cuarta', 'Quinta', 'Sexta', 'Séptima', 'Octava', 'Novena', 'Décima', 'Undécima', 'Duodécima']; %>
+                            <% for( let i = 0; i < module1.length; i++ ) { %>
+                                <div class="form-group">
+                                    <form method="post" action="/mail/send">
+                                        <tr>
+                                            <th scope="row">PP | JS Basic Algorithms</th>
+
+                                            <td>
+                                                <div class="checkbox">
+                                                    <input class="sum" type="checkbox" name="primera" value="primera"> Primera
+                                                    <br>
+                                                    <input class="sum" type="checkbox" name="segunda" value="segunda"> Segunda
+                                                    <br>
+                                                    <input class="sum" type="checkbox" name="tercera" value="tercera"> Tercera
+                                                    <br>
+                                                    <input class="sum" type="checkbox" name="cuarta" value="cuarta"> Cuarta
+                                                    <br>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <textarea class="textarea" cols="30" rows="4" name="comentarios">asdasdasd</textarea>
+                                            </td>
+                                            <td>
+                                                <button type="submit" class="btn btn-primary waves-effect">Guardar en Github</button>
+                                                <br>
+                                                <button id="emailLink" class="btn btn-light waves-effect">Enviar Comentario</button>
+                                            </td>
+                                        </tr>
+                                    </form>
+                                </div>
+
+                                <% } %>
 
                     </tbody>
                 </table>
