--- a/irontracking/views/stats.ejs
+++ b/irontracking/views/stats.ejs
@@ -19,11 +19,8 @@
             </div>
             <ul class="nav nav-pills flex-column">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Tracking
+                    <a class="nav-link" href="/dashboard">Tracking
                     </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Perfil</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="#">Estadísticas</a>
@@ -34,21 +31,21 @@
             </ul>
             <div class="lechuga-bar">
                 <div>
-                    <span>Módulo 1</span>
+                    <span>Módulo 1</span><div class="trofeo"></div>
                     <div class="progress">
                         <div id="progressBar1" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
                             aria-valuemin="0" aria-valuemax="100" style="width: 0%"> 0% </div>
                     </div>
                 </div>
                 <div>
-                    <span>Módulo 2</span>
+                    <span>Módulo 2</span><div class="trofeo"></div>
                     <div class="progress">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0"
                             aria-valuemax="100" style="width: 50%"> 50% </div>
                     </div>
                 </div>
                 <div>
-                    <span>Módulo 3</span>
+                    <span>Módulo 3</span><div class="trofeo"></div>
                     <div class="progress">
                         <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0"
                             aria-valuemax="100" style="width: 100%"> 100% </div>
@@ -59,21 +56,21 @@
 
         <!---------- MAIN ---------->
         <main class="col-sm-9 col-md-10 ">
-
-                <button id="emailLink" class="btn btn-light waves-effect probando">Enviar Comentario</button>
-                <i class="fas fa-trophy faa-tada animated"></i>
+            <div class="tuStat">
+                <h4 style="display:inline;">Tu puntuación es <h3 style="display:inline;"> #</h3></h4>
+            </div>
             <div class="statsContainer">
                 <div class="statsSecond stadisticas">
-                    <p>BLA BLA BLA BLA BLA </p>
+                    <p>BLA BLA BLA BLA</p>
                     <img src="/img/PLATA.png" alt="imágen Plata">
                 </div>
 
                 <div class="statsFirst stadisticas">
-                    <p>BLA BLA BLA BLA BLA </p>
+                    <p>BLA BLA BLA BLA</p>
                     <img src="/img/oro.png" alt="imágen Oro">
                 </div>
                 <div class="statsThird stadisticas">
-                    <p>BLA BLA BLA BLA BLA </p>
+                    <p>BLA BLA BLA BLA</p>
                     <img src="/img/BRONCE.png" alt="imágen Bronce">
                 </div>
             </div>
