Fix: minor changes

--- a/irontracking/views/admin/index.ejs
+++ b/irontracking/views/admin/index.ejs
@@ -230,7 +230,7 @@
                 </table>
             </div>
 
-            <div class="modulo2 pestnavs active">
+            <div class="modulo2 pestnavs">
                 <table class="table">
                     <thead class="bg-secondary text-white">
                     <tr>
@@ -282,7 +282,7 @@
                 </table>
             </div>
 
-            <div class="modulo3 pestnavs active">
+            <div class="modulo3 pestnavs">
                 <table class="table">
                     <thead class="bg-secondary text-white">
                     <tr>
