--- a/irontracking/views/dashboard.ejs
+++ b/irontracking/views/dashboard.ejs
@@ -57,9 +57,11 @@
 
         <!---------- MAIN ---------->
         <main class="col-sm-9 col-md-10">
-            <p class="display-4 text-secondary">Bienvenido,
+            <p class="text-secondary">Bienvenido,
                 <%= user.displayName %>
             </p>
+
+            <p class="display-4 text-secondary">Ejercicios GitHub</p>
             <br>
             <div class="nav">
                 <ul class="nav nav-tabs">
@@ -72,9 +74,7 @@
                     <li class="nav-item">
                         <a class="nav-link" id="modulo3" href="#">Módulo 3</a>
                     </li>
-                    <li class="createBtn">
-                        <button type="submit" class="btn btn-light waves-effect add-ex">Añadir ejercicio</button>
-                    </li>
+
                 </ul>
             </div>
 
@@ -136,7 +136,7 @@
                 </table>
             </div>
 
-            <div class="modulo2 pestnavs active">
+            <div class="modulo2 pestnavs">
                 <table class="table modulo1table">
                     <thead class="bg-secondary text-white">
                     <tr>
@@ -194,7 +194,7 @@
                 </table>
             </div>
 
-            <div class="modulo3 pestnavs active">
+            <div class="modulo3 pestnavs">
                 <table class="table modulo1table">
                     <thead class="bg-secondary text-white">
                     <tr>
