Fix: trying to fix module buttons. Not possible for me. Help me Alvaro

--- a/irontracking/views/dashboard.ejs
+++ b/irontracking/views/dashboard.ejs
@@ -160,7 +160,7 @@
                 </table>
             </div>
 
-            <div class="modulo2 pestnavs active">
+            <div class="modulo2 pestnavs">
 
                 <table class="table modulo2table">
 
@@ -229,7 +229,7 @@
                 </table>
             </div>
 
-            <div class="modulo3 pestnavs active">
+            <div class="modulo3 pestnavs">
 
                 <table class="table modulo3table">
 
@@ -297,7 +297,6 @@
                     </tbody>
                 </table>
             </div>
-
 
         </main>
     </div>
